--- a/style/Calc.css
+++ b/style/Calc.css
@@ -22,9 +22,10 @@ button {
     opacity:1;
     font-family:"Roboto Mono";
     font-size:2em;
-    box-shadow: 1px 1px 6px 1px #00000055;
+    box-shadow: 0px 0px 3px 1px #00000055;
     outline:none;
     background:#FEFEFE;
+    caret-color:#000;
     border:none;
     border-radius:10px;
     padding:0.1em;
@@ -36,12 +37,12 @@ button {
 }
 .mobile > #boxwrapper > #inputContainer > #input {
     border-radius:0px;
-    box-shadow: 0px 6px 4px -4px #00000055;
+    box-shadow: 0px 6px 3px -3px #00000055;
     width:100%;
     max-width:100%;
 }
 #input:focus {
-    box-shadow: 1px 1px 8px 1px #00000077;
+    box-shadow: 0px 0px 4px 2px #00000066;
 }
 #box {
     text-align:left;
@@ -101,12 +102,13 @@ button {
     box-shadow: 1px 1px 10px 5px #00000033;
     display:none;
     z-index:10;
+    overflow-y:auto;
 }
 .panelPage {
     width:100%;
-    height:100%;
     display:none;
-    overflow-y:auto;
+    overflow:visible;
+    padding-bottom:4em;
 }
 #helpSearchBox {
     width:100%;
@@ -129,7 +131,7 @@ button {
     width:100%;
     display:block;
     border:none;
-    background:#FFFFFF;
+    background:#F0F0F0;
     text-align:left;
     font-size:1.25em;
     outline:none;
@@ -140,10 +142,10 @@ button {
     border-bottom: #88888888 1px dashed;
 }
 .buttonList > button:hover {
-    background:#88888833;
+    background:#FFFFFF22;
 }
 .buttonList > button:focus {
-    background:#88888844;
+    background:#FFFFFF33;
 }
 .tableborder {
     border-collapse:collapse;
@@ -162,7 +164,7 @@ button {
     font-weight:bold;
     width:1.5em;
     height:1.5em;
-    background:#88888833;
+    background:#FDFDFD;
     border:none;
     text-align:center;
     vertical-align:bottom;
@@ -172,10 +174,10 @@ button {
     box-shadow:none;
 }
 .menuOpenButton:not(:first-child) {
-    border-left: #00000044 1px dashed;
+    border-left: #00000055 1px dashed;
 }
 .menuOpenButton:hover {
-    background:#88888855;
+    background:#BBBBBB33;
 }
 #menubuttons {
     position:fixed;
@@ -184,7 +186,7 @@ button {
     border-radius:10px 0 0 0;
     vertical-align:bottom;
     overflow:hidden;
-    box-shadow:-1px -1px 3px 0px #00000033;
+    box-shadow:-1px -1px 2px 0px #00000022;
     z-index:20;
 }
 a {
@@ -197,8 +199,12 @@ button {
     border-radius: 4px;
     font-size:1.1em;
     padding:0.25em 0.5em 0.25em 0.5em;
-    box-shadow:0px 0px 4px 0px #00000033;
+    box-shadow:0px 0px 3px 0px #00000022;
     min-width:7ch;
+    background:#FEFEFE;
+}
+.backbutton:hover {
+    background:#E0E0E030;
 }
 /* Syntax Highlighting */
 .syn-error, .syn-invalid, .syn-errorop, .syn-undefined {
